--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/cookie.css')
   body
     block content
