[FEAT] cooking 페이지 이벤트 및 애니메이션 구현
- 체크박스 및 모달 구현
- 애니메이션 위한 이미지 추가
- 결과 모달에 애니메이션 적용
- 인풋 내용 전송 fetch 구현 (post)

--- a/views/cooking.pug
+++ b/views/cooking.pug
@@ -20,3 +20,4 @@ html
         div.flex.input-form__result__modal.hidden
             img(src='images/cookie.png', alt='cookie').input-form__result__cookie
             button.input-form__result__button 돌아가기
+    script(type='module' src='/javascripts/cooking.js')
