[Feat] 쿠키 흔들리는 애니메이션 추가
cookie가 .open이 아닌 경우 계속해서 흔들리도록 했음.
@keyframes shake 추가함

--- a/public/stylesheets/cookie.css
+++ b/public/stylesheets/cookie.css
@@ -85,6 +85,13 @@ small, .small {
     height: 40vmin;
     position: relative;
     width: 100%;
+
+#fortuneCookie:not(.open) {
+    transform-origin: 50% 0%;
+    animation-name: shake;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-delay: 0.5s;
 }
 
 #fortuneCookie.clear:not(.open) {
@@ -349,4 +356,34 @@ small, .small {
         z-index: 10;
         transform: translateZ(90deg);
    }
+}
+
+@keyframes shake{
+    0%{
+        transform: rotate(0deg);
+    }
+    10%{
+        transform: rotate(5deg);
+    }
+    20%{
+        transform: rotate(-5deg);
+    }
+    30%{
+        transform: rotate(5deg);
+    }
+    40%{
+        transform: rotate(-5deg);
+    }
+    50%{
+        transform: rotate(5deg);
+    }
+    60%{
+        transform: rotate(-5deg);
+    }
+    70%{
+        transform: rotate(5deg);
+    }
+    100%{
+        transform: rotate(0deg);
+    }
 }
