[FEAT] Header 생성 및 색상 조정
logo에는 transition 0.5s, 나머지 items에는 일반 호버 효과 적용

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,9 @@
+@font-face {
+  font-family: "swgi";
+  src: url("./font/aKoreanSWGI.ttf");
+}
+
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
