--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,12 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    block css
+    link(rel='stylesheet', href='./stylesheets/style.css')
+    link(rel='stylesheet', href='./stylesheets/header.css')
   body
+    include ./header.pug
     block content
+    
+    script(src="./javascripts/header.js")
+    block script
