--- a/views/hot.pug
+++ b/views/hot.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     h1 매운맛 쿠키
-    small Tap on the cookie to open
+    small 쿠키를 클릭 해주세요
     #fortuneCookie
         button(type="button")#cookie
             .cookie
@@ -12,9 +12,10 @@ block content
                     .fortune
                     .numbers
         button(type="button")#flip.front.small
-    button#new(type="button") 새로 뽑기
-    form(action="/" method="get")
-        button#return(type="submit") 돌아가기
+    .button-wrapper
+        button#new(type="button") 새로 뽑기
+        form(action="/" method="get")
+            button#return(type="submit") 돌아가기
 
     script(src='javascripts/cookie.js')
     
