[FEAT] cooking 페이지 구현 수정
- fetch post 요청 경로 변경
- 결과 모달에서 돌아가기 구현 (css 추가)

--- a/public/stylesheets/cooking.css
+++ b/public/stylesheets/cooking.css
@@ -84,6 +84,10 @@ button{
     border-radius: 50px;
     position: absolute;
     bottom: 60px;
+    background-color: #ECE8E4;
+    text-decoration: none;
+    color: inherit;
+    text-align: center;
 }
 
 .hidden{
@@ -93,6 +97,7 @@ button{
 .animation{
     animation-duration: 3s;
     animation-name: cookie;
+    opacity: 0;
 }
 
 @keyframes cookie {
