--- a/views/cooking.pug
+++ b/views/cooking.pug
@@ -19,5 +19,5 @@ html
 
         div.flex.input-form__result__modal.hidden
             img(src='images/cookie.png', alt='cookie').input-form__result__cookie
-            button.input-form__result__button 돌아가기
+            a(href='./').input-form__result__button 돌아가기 
     script(type='module' src='/javascripts/cooking.js')
