--- a/views/cooking.pug
+++ b/views/cooking.pug
@@ -1,6 +1,7 @@
-html 
-    head 
-        link(rel='stylesheet', href='/stylesheets/cooking.css')
+extends layout
+block css
+    link(rel='stylesheet', href='/stylesheets/cooking.css')
+block content
     body.input-form__font-size
         div.input-form.flex.relative
             div
