--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html
     block css
     link(rel='stylesheet', href='./stylesheets/style.css')
     link(rel='stylesheet', href='./stylesheets/header.css')
-    link(rel='stylesheet', href='/stylesheets/cookie.css')
+    link(rel='stylesheet', href='./stylesheets/cookie.css')
 
   body
     include ./header.pug
