--- a/public/stylesheets/cooking.css
+++ b/public/stylesheets/cooking.css
@@ -31,6 +31,7 @@ button{
 .input-form{
     width: 90%;
     height: 700px;
+    margin-top: 150px;
 }
 
 .input-form__check{
@@ -61,6 +62,7 @@ button{
 }
 
 .input-form__result__modal{
+    margin-top: 150px;
     width: 90%;
     height: 700px;
     position: absolute;
