--- a/views/header.pug
+++ b/views/header.pug
@@ -1,9 +1,14 @@
 body
   .navbar
     .navbar__logo
-      p 맛좀 볼래?!
+      a(href=`./`)
+        p 맛좀 볼래?!
     .navbar__items
-      p 오늘의 운세
-      p 순한맛 쿠키
-      p 매운맛 쿠키
-      p 쿠키 굽기
+      a(href=`./fortune` class="nav__fortune")
+        p 오늘의 운세
+      a(href=`./mild` class="nav__mild")
+        p 순한맛 쿠키
+      a(href=`./hot` class="nav__hot")
+        p 매운맛 쿠키
+      a(href=`./cooking` class="nav__cooking")
+        p 쿠키 굽기
