[FEAT] cooking 페이지 쿠키 더 굽기 버튼 추가
- main page로 돌아가는 돌아가기 버튼
- cooking page로 돌아가는 쿠키 더 굽기 버튼 추가

--- a/public/stylesheets/cooking.css
+++ b/public/stylesheets/cooking.css
@@ -5,6 +5,12 @@
     align-items: center;
 }
 
+.flex__horizon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .relative{
     position: relative;
 }
@@ -85,7 +91,7 @@ button{
 }
 
 .input-form__result__button{
-    width: 345px;
+    width: 320px;
     height: 75px;
     border-radius: 50px;
     position: absolute;
@@ -94,6 +100,11 @@ button{
     text-decoration: none;
     color: inherit;
     text-align: center;
+}
+
+.input-form__result__back{
+    width: 400px;
+    height: 100px;
 }
 
 .hidden{
