--- a/views/cooking.pug
+++ b/views/cooking.pug
@@ -20,5 +20,9 @@ block content
 
         div.flex.input-form__result__modal.hidden.margin7
             img(src='images/cookie.png', alt='cookie').input-form__result__cookie
-            a(href='./').input-form__result__button 돌아가기 
+            div.flex__horizon
+                div.input-form__result__back
+                    a(href='./').input-form__result__button 돌아가기 
+                div.input-form__result__back
+                    a(href='./cooking').input-form__result__button 쿠키 더 굽기
     script(type='module' src='/javascripts/cooking.js')
