--- a/views/hot.pug
+++ b/views/hot.pug
@@ -1,21 +1,24 @@
 extends layout    
 
 block content
-    h1 매운맛 쿠키
-    small 쿠키를 클릭 해주세요
-    #fortuneCookie
-        button(type="button")#cookie
-            .cookie
-            .cookie
-            .paper-wrapper
-                .paper
-                    .fortune
-                    .numbers
-        button(type="button")#flip.front.small
-    .button-wrapper
-        button#new(type="button") 새로 뽑기
-        form(action="/" method="get")
-            button#return(type="submit") 돌아가기
+    .cookie__body
+        .title
+            h1 매운맛 쿠키
+        .sub-title
+            small 쿠키를 클릭 해주세요
+        #fortuneCookie
+            button(type="button")#cookie
+                .cookie
+                .cookie
+                .paper-wrapper
+                    .paper
+                        .fortune
+                        .numbers
+            button(type="button")#flip.front.small
+        .button-wrapper
+            button#new(type="button") 새로 뽑기
+            form(action="/" method="get")
+                button#return(type="submit") 돌아가기
 
     script(src='javascripts/cookie.js')
     
