[FEAT] cooking 페이지 헤더 포함하도록 수정
- 헤더 위치 확보를 위해 레이아웃 전체적으로 내리기
- layout.pug에 cooking.css 추가
- extends와 block으로 내용 구현

--- a/public/stylesheets/cooking.css
+++ b/public/stylesheets/cooking.css
@@ -24,14 +24,19 @@ button{
     font-size: inherit;
 }
 
+.margin6{
+    margin-top: 6%;
+}
+.margin7{
+    margin-top: 7%;
+}
 .input-form__font-size{
-    font-size: 40px;
+    font-size: 30px;
 }
 
 .input-form{
     width: 90%;
     height: 700px;
-    margin-top: 150px;
 }
 
 .input-form__check{
@@ -62,7 +67,6 @@ button{
 }
 
 .input-form__result__modal{
-    margin-top: 150px;
     width: 90%;
     height: 700px;
     position: absolute;
