[FEAT] 순한맛 페이지 생성
매운맛 페이지에서 사용하는 js파일명 변경(cookie.js -> hot-cookie.js)
mild-cookie.js 생성

--- a/views/hot.pug
+++ b/views/hot.pug
@@ -20,5 +20,5 @@ block content
             form(action="/" method="get")
                 button#return(type="submit") 돌아가기
 
-    script(src='javascripts/cookie.js')
+    script(src='javascripts/hot-cookie.js')
     
