--- a/views/cooking.pug
+++ b/views/cooking.pug
@@ -2,7 +2,7 @@ extends layout
 block css
     link(rel='stylesheet', href='/stylesheets/cooking.css')
 block content
-    body.input-form__font-size
+    body.input-form__font-size.flex
         div.input-form.flex.relative.margin6
             div
                 label.input-form__check
