[FEAT] 메인페이지 레이아웃 작성
4개의 버튼을 각각의 페이지로 연결되도록 설정, CSS 작성까지 완료 - 정렬 개선 필요

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,1 +1,19 @@
 extends layout
+block css 
+  link(rel='stylesheet', href='/stylesheets/index.css')
+block content
+  .main
+    a(href=`./mild`)
+      .main__mild 
+        p 순한맛 쿠키
+        img(src='/images/mild-tray.png')
+    a(href=`./hot`)
+      .main__hot 
+        p 매운맛 쿠키
+        img(src='/images/hot-tray.png')
+    a(href=`./cooking`)
+      .main__cooking 
+        p 쿠키 굽기
+    a(href=`./fortune`)
+      .main__fortune
+        p 오늘의 운세
