[FEAT] 오늘의 운세 페이지 생성
띠 별 사진 추가
fortune.pug에 띠 별 사진 보여줌
zodiac.pug에 선택된 띠 별 운세를 보여줌
routes/index.js에 today-fortune 라우팅 추가

--- a/views/fortune.pug
+++ b/views/fortune.pug
@@ -1,1 +1,13 @@
 extends layout
+
+block css 
+    link(rel='stylesheet', href='./stylesheets/fortune.css')
+
+block content 
+    .fortune__body
+        each val, index in ['mouse', 'cow', 'tiger', 'rabbit', 'dragon', 'snake', 'horse', 'sheep', 'monkey', 'hen', 'dog', 'pig']
+            .zodiac__wrapper
+                <a href='http://localhost:3000/today-fortune/#{val}'>
+                    <img src='/images/zodiac/#{val}.jpg' alt="#{val}">
+                </a>
+                
