--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,13 +3,13 @@ html
   head
     title= title
     block css
-    link(rel='stylesheet', href='./stylesheets/style.css')
-    link(rel='stylesheet', href='./stylesheets/header.css')
-    link(rel='stylesheet', href='./stylesheets/cookie.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/header.css')
+    link(rel='stylesheet', href='/stylesheets/cookie.css')
 
   body
     include ./header.pug
     block content
     
-    script(src="./javascripts/header.js")
+    script(src="/javascripts/header.js")
     block script
