--- a/public/stylesheets/pages/header.css
+++ b/public/stylesheets/pages/header.css
@@ -1,17 +1,7 @@
-@font-face {
-    font-family: "swgi";
-    src: url("../fonts/aKoreanSWGI.ttf");
-}
-
-@font-face {
-    font-family: "nanumpen";
-    src: url("../fonts/nanumpen.ttf");
-}
-
 .navbar{
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     display: flex;
     align-items: center;
     width: 100%;
@@ -89,8 +79,8 @@
 @media screen and (max-width:1100px) {
     .navbar {
         position: absolute;
-        top: 0px;
-        left: 0px;
+        top: 0;
+        left: 0;
         width: 1100px;
         height: 100px;
         align-items : flex-start; 
