--- a/public/stylesheets/pages/header.css
+++ b/public/stylesheets/pages/header.css
@@ -1,29 +1,39 @@
 .navbar{
-    position: absolute;
-    top: 0;
-    left: 0;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 100px;
+    height: 150px;
     background: #C09F80;
     margin: 0;
 }
 
+.navbar-column {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.navbar-column:first-child {
+    min-width: 350px;
+}
+.navbar-column:nth-child(2) {
+    min-width: 800px;
+}
 .navbar a{
     text-decoration-line: none;
 }
 
 .navbar__logo a p{
     font-family: "nanumpen";
-    font-size: 64px;
+    font-size: 72px;
     font-weight: 500;
     color: black;
-    margin: auto;
     text-align: center;
     vertical-align: middle;
     line-height: 100px;
-    margin-left: 70px;
+    padding-left: 70px;
 }
 
 .navbar__logo a p:hover {
@@ -42,10 +52,9 @@
 
 .navbar__items a p{
     font-family: "swgi";
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 500;
     height: 30px;
-    margin: auto;
     line-height: 100px;
     margin-left: 50px;
 }
@@ -74,15 +83,4 @@
 .navbar__items a p:hover{
     font-weight: 600;
     cursor: pointer;
-}
-
-@media screen and (max-width:1100px) {
-    .navbar {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 1100px;
-        height: 100px;
-        align-items : flex-start; 
-    }
 }
