[FIX]body를 반응형으로 변경
body 태그를 반응형으로 변경함.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,7 @@ html
 
   body
     include ./header.pug
-    block content
-    
+    .main-layout
+        block content
     script(src="/javascripts/header.js")
     block script
