--- a/public/stylesheets/pages/header.css
+++ b/public/stylesheets/pages/header.css
@@ -1,4 +1,5 @@
 .navbar{
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,31 +10,35 @@
 }
 
 .navbar-column {
-    width: 100%;
+    box-sizing: border-box;
     height: 150px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.navbar-column:first-child {
-    min-width: 350px;
+.navbar-column:nth-child(1) {
+    box-sizing: border-box;
+    flex:1;
 }
 .navbar-column:nth-child(2) {
-    min-width: 800px;
+    box-sizing: border-box;
+    flex:3;
+    display: flex;
 }
+
 .navbar a{
     text-decoration-line: none;
 }
 
 .navbar__logo a p{
     font-family: "nanumpen";
-    font-size: 72px;
+    font-size: 64px;
     font-weight: 500;
     color: black;
     text-align: center;
     vertical-align: middle;
     line-height: 100px;
-    padding-left: 70px;
+    padding-left: 30px;
 }
 
 .navbar__logo a p:hover {
@@ -52,11 +57,12 @@
 
 .navbar__items a p{
     font-family: "swgi";
-    font-size: 30px;
+    width: 100%;
+    font-size: 26px;
     font-weight: 500;
     height: 30px;
     line-height: 100px;
-    margin-left: 50px;
+    margin-left: 20px;
 }
 
 .navbar__items .nav__fortune {
