--- a/public/stylesheets/pages/index.css
+++ b/public/stylesheets/pages/index.css
@@ -1,71 +1,80 @@
-.main {
-    position: relative;
-    top: -30px;
+.main-layout {
+    box-sizing: border-box;
+    width: 100%;
+    height: calc(100% - 150px);
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.main__mild {
-    position: absolute;
-    width: 379px;
+.main {
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+}
+.main-column {
+    width: 100%;
     height: 710px;
-    left: 92px;
-    top: 202px;
-
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px;
+    margin-right: 50px;
+}
+.main-column:first-child {
     background: #033E8C;
     border-radius: 50px;
+}
+.main-column:nth-child(2) {
+    background: #BF0426;
+    border-radius: 50px;
+}
+.main-column:nth-child(3) {
+    min-width: 360px;
+    padding: 0;
+    height: 809.98px;
+    border-radius: 50px;
+    margin-right: 0;
+}
+.main__mild, .main__hot{
+    width: 100%;
+    height: 710px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
 }
 
 .main__mild p {
     font-family: "cookierun";
     font-size: 64px;
     color: white;
-    
-    position: relative;
     text-align: center;
 }
-
 .main__mild img {
-    position: absolute;
-    top: 307px;
-    left: -23px;
+    width: 100%;
 }
-
-
-
-.main__hot {
-    position: absolute;
-    width: 359px;
-    height: 710px;
-    left: 555px;
-    top: 207px;
-
-    background: #BF0426;
-    border-radius: 50px;
-}
-
 .main__hot p {
     font-family: "cookierun";
     font-size: 64px;
     color: white;
-    
-    position: relative;
     text-align: center;
 }
-
 .main__hot img {
-    position: absolute;
-    top: 305px;
-    left: -28px;
-    width: 415px;
+    width: 100%;
 }
-
-
 .main__cooking {
-    position: absolute;
-    width: 362px;
-    height: 337px;
-    left: 1000px;
-    top: 207px;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 350px;
     background: #EFEFEF;
     border-radius: 50px;
 }
@@ -74,19 +83,17 @@
     font-family: "cookierun";
     font-size: 64px;
     color: black;
-    
     text-align: center;
     line-height: 220px;
 }
 
 
 .main__fortune {
-    position: absolute;
-    width: 363px;
-    height: 335px;
-    left: 999px;
-    top: 582px;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 400px;
     background: #FEE38B;
     border-radius: 50px;
 }
@@ -95,7 +102,6 @@
     font-family: "brrn";
     font-size: 56px;
     color: black;
-    
     text-align: center;
     line-height: 220px;
 }
