--- a/views/index.pug
+++ b/views/index.pug
@@ -2,17 +2,20 @@ extends layout
 
 block content
   .main
-    a(href=`./mild`)
-      .main__mild 
-        p 순한맛 쿠키
-        img(src='/images/mild-tray.png')
-    a(href=`./hot`)
-      .main__hot 
-        p 매운맛 쿠키
-        img(src='/images/hot-tray.png')
-    a(href=`./cooking`)
-      .main__cooking 
-        p 쿠키 굽기
-    a(href=`./fortune`)
-      .main__fortune
-        p 오늘의 운세
+    .main-column
+        a(href=`./mild`)
+          .main__mild
+            p 순한맛 쿠키
+            img(src='/images/mild-tray.png')
+    .main-column
+        a(href=`./hot`)
+          .main__hot
+            p 매운맛 쿠키
+            img(src='/images/hot-tray.png')
+    .main-column
+        .main__cooking
+            a(href=`./cooking`)
+                p 쿠키 굽기
+        .main__fortune
+            a(href=`./fortune`)
+                p 오늘의 운세
