--- a/views/header.pug
+++ b/views/header.pug
@@ -6,11 +6,11 @@ body
                 p 맛좀 볼래?!
     .navbar-column
         .navbar__items
-          a(href=`./fortune` class="nav__fortune")
-            p 오늘의 운세
-          a(href=`./mild` class="nav__mild")
+          a(href=`/mild` class="nav__mild")
             p 순한맛 쿠키
-          a(href=`./hot` class="nav__hot")
+          a(href=`/hot` class="nav__hot")
             p 매운맛 쿠키
-          a(href=`./cooking` class="nav__cooking")
+          a(href=`/cooking` class="nav__cooking")
             p 쿠키 굽기
+          a(href=`/fortune` class="nav__fortune")
+            p 오늘의 운세
