[STYLE] cookie 별로 색깔 설정할 수 있게 css 파일 나눔
각 cookie 별로 css 파일을 가지고 cookie.css를 import해서 구현함.
각 pug에 일치하는 css 설정

--- a/views/hot.pug
+++ b/views/hot.pug
@@ -1,5 +1,8 @@
 extends layout    
 
+block css 
+    link(rel="stylesheet", href="/stylesheets/pages/hot-cookie.css")
+
 block content
     .cookie__body
         .title
@@ -19,4 +22,4 @@ block content
             button#new(type="button") 새로 뽑기
             form(action="/" method="get")
                 button#return(type="submit") 돌아가기
-    script(src='javascripts/hot-cookie.js')
+    script(src='/javascripts/hot-cookie.js')
