[FIX] 착한맛 아니고 순한맛

--- a/views/mild.pug
+++ b/views/mild.pug
@@ -6,7 +6,7 @@ block css
 block content
     .cookie__body
         .title
-            h1 착한맛 쿠키
+            h1 순한맛 쿠키
         .sub-title
             small 쿠키를 클릭 해주세요
         #fortuneCookie
