--- a/public/stylesheets/pages/cookie.css
+++ b/public/stylesheets/pages/cookie.css
@@ -8,12 +8,18 @@
     flex-direction: column;
     text-align: center;
     align-items: center;
-
     height: 100%;
-
     margin-top: 100px;
 }
-
+.cookie__body .title {
+    font-size: 35px;
+    font-weight: 600;
+}
+.cookie__body .sub-title {
+    margin-top: 10px;
+    font-size: 22px;
+    padding-bottom: 25px;
+}
 .button-wrapper {
     display: flex;
     flex-direction: row;
@@ -89,11 +95,13 @@ button#cookie:disabled {
 #new {
     background-color: var(--main-color);
     border: 1px solid transparent;
-    border-radius: 0.25rem;
+    border-radius: 20px;
+    font-size: 30px;
+    font-weight: 600;
+    width: 250px;
+    height: 150px;
     color: white;
-    font-size: 1rem;
     transition: 250ms;
-
     margin: 0 1rem 0 1rem;
 }
 
@@ -106,11 +114,13 @@ button#cookie:disabled {
 #return {
     background-color: grey;
     border: 1px solid transparent;
-    border-radius: 0.25rem;
+    border-radius: 20px;
+    font-size: 30px;
+    font-weight: 600;
+    width: 250px;
+    height: 150px;
     color: white;
-    font-size: 1rem;
     transition: 250ms;
-
     margin: 0 1rem 0 1rem;
 }
 
