[FIX] zodiac.pug 데이터 변경 수정
zodiac.pug의 18줄 .fortune 를 .fortune= content로 수정

--- a/views/zodiac.pug
+++ b/views/zodiac.pug
@@ -15,7 +15,7 @@ block content
                 .cookie
                 .paper-wrapper
                     .paper
-                        .fortune ${contents}
+                        .fortune= contents
                         .numbers
             button(type="button")#flip.front.small
         .button-wrapper
