--- a/views/zodiac.pug
+++ b/views/zodiac.pug
@@ -18,6 +18,7 @@ block content
                         .fortune= contents
                         .numbers
             button(type="button")#flip.front.small
+        audio(id='cookie-sound' src="/sounds/cookie.mp3") 
         .button-wrapper
             form(action="/" method="get")
                 button#return(type="submit") 돌아가기
