--- a/views/mild.pug
+++ b/views/mild.pug
@@ -18,6 +18,7 @@ block content
                         .fortune
                         .numbers
             button(type="button")#flip.front.small
+        audio(id='cookie-sound' src="/sounds/cookie.mp3") 
         .button-wrapper
             button#new(type="button") 새로 뽑기
             form(action="/" method="get")
