[FIX] cooking 버튼 가운데 정렬
cooking.css 수정

--- a/public/stylesheets/pages/cooking.css
+++ b/public/stylesheets/pages/cooking.css
@@ -102,6 +102,7 @@ input[type="checkbox"]:checked + label span {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    line-height: 80px;
 }
 
 .input-form__result__cookie{
