--- a/views/hot.pug
+++ b/views/hot.pug
@@ -6,9 +6,10 @@ block css
 block content
     .cookie__body
         .title
-            h1 매운맛 쿠키
+            p 매운맛 쿠키
         .sub-title
-            small 쿠키를 클릭 해주세요
+            p 아래에 있는 쿠키를 
+                span(style="color:red") 클릭!!!
         #fortuneCookie
             button(type="button")#cookie
                 .cookie
