[STYLE] 띠 별 운세 년생 별로 나눠 출력
띠 별 운세 보여주는 dialog width 조절
년생 별로 출력하고 css도 추가

--- a/public/stylesheets/pages/zodiac-cookie.css
+++ b/public/stylesheets/pages/zodiac-cookie.css
@@ -4,3 +4,23 @@
     --cookie-color : yellow;
     --main-color : yellow;
 }
+
+#zodiac__dialog {
+    width: 60%;
+}
+
+#zodiac__dialog > p {
+    margin: 20px;
+}
+
+dialog > .content {
+    margin-bottom: 30px;
+}
+
+dialog > .content-in-year > .year{
+    font-weight: bold;
+}
+
+dialog > .content-in-year > .content {
+    margin : 10px 0 10px 0;
+}
